Fixes some layout issues with HTML tags and large screens

--- a/website_code/styles/xapi_dashboard.css
+++ b/website_code/styles/xapi_dashboard.css
@@ -413,6 +413,7 @@ td.x-dashboard-interaction
     margin-bottom: 1rem;
     margin-left: 1rem;
     float:left;
+    word-break: break-all;
 }
 
 .panel.col-12 {
